Fixes to css (overflow on Chrome)

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-/* /////////  TOP PANEL  /////////// */
-
 @import url(https://fonts.googleapis.com/css?family=Bangers);
 
-.top-panel{
+.top-panel {
   /* border: 1px solid black; */
   width: 100%;
   height: 100px;
@@ -11,144 +9,131 @@
   align-items: center;
 }
 
-.info-area{
-
+.info-area {
   display: flex;
   height: 40px;
   width: 150px;
   /* margin: 10px; */
   padding-top: 10px;
   padding-bottom: 10px;
-  background:#fff;
+  background: #fff;
   border: solid black;
   border-width: 3px 4px 3px 5px;
-  border-radius:95% 4% 92% 5%/4% 95% 6% 95%;
+  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
   transform: rotate(1deg);
-  font-family: 'Bangers';
+  font-family: "Bangers";
   font-size: 25px;
-
 }
 
-#lifeArea{
-  background-color: #FFFFCA;
+#lifeArea {
+  background-color: #ffffca;
   padding-left: 25px;
 }
 
-#scoresArea, #timeArea{
-  background: #FFFFCA;
+#scoresArea,
+#timeArea {
+  background: #ffffca;
   text-align: center;
   flex-direction: column;
   justify-content: center;
 }
 
-
-/* /////////  BACKGROUND  /////////// */
-
 body {
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
 }
 
 .background {
-    background: url(https://i.ibb.co/sv6wRvq/wildwest-bg.jpg);
-    background-size: cover;
-    background-position: bottom;
-    width: 100%;
-    height: 100vh;
-
+  background: url(https://i.ibb.co/sv6wRvq/wildwest-bg.jpg);
+  background-size: cover;
+  background-position: bottom;
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
 img.background__tembleweed {
-    animation: templeWeed 5s infinite 1s;
+  animation: templeWeed 5s infinite 1s;
 }
 
 .background__templeweed-container {
-    position: absolute;
-    bottom: 20px;
-    width: 10vw;
-    transform: translateX(-100%);
-    animation: moveWeed 3s infinite linear;
+  position: absolute;
+  bottom: 20px;
+  width: 10vw;
+  transform: translateX(-100%);
+  animation: moveWeed 3s infinite linear;
 }
 
 @keyframes moveWeed {
-    0% {
-        left: 0;
-        transform: translateX(-100%) rotate(0);
-    }
+  0% {
+    left: 0;
+    transform: translateX(-100%) rotate(0);
+  }
 
-    100% {
-        left: 130%;
-        transform: translateX(100%) rotate(540deg);
-    }
+  100% {
+    left: 130%;
+    transform: translateX(100%) rotate(540deg);
+  }
 }
 
 @keyframes templeWeed {
-    0% {
-        transform: translateY(0);
-    }
+  0% {
+    transform: translateY(0);
+  }
 
-    30% {
-        transform: translateY(-3vw);
-    }
+  30% {
+    transform: translateY(-3vw);
+  }
 
-    60% {
-        transform: translateY(-4vw);
-    }
+  60% {
+    transform: translateY(-4vw);
+  }
 
-    90% {
-        transform: translateY(0);
-    }
+  90% {
+    transform: translateY(0);
+  }
 
-    90% {
-        transform: translateY(0);
-    }
-
+  90% {
+    transform: translateY(0);
+  }
 }
 
-
-/* /////////  HEART  /////////// */
-
 .heart {
-    position: relative;
-    margin:10px;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #D02A3B;
-    height: 20px;
-    width: 20px;
-    transform: rotate(-45deg);
-  }
-  .heart::after {
-    background-color: #D02A3B;
-    content: "";
-    border-radius: 50%;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: 0px;
-    left: 10px;
-  }
-  .heart::before {
-    content: "";
-    background-color: #D02A3B;
-    border-radius: 50%;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    top: -10px;
-    left: 0px;
-  }
+  position: relative;
+  margin: 10px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #d02a3b;
+  height: 20px;
+  width: 20px;
+  transform: rotate(-45deg);
+}
+.heart::after {
+  background-color: #d02a3b;
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0px;
+  left: 10px;
+}
+.heart::before {
+  content: "";
+  background-color: #d02a3b;
+  border-radius: 50%;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -10px;
+  left: 0px;
+}
 
-
-
-
-
-/* /////////  GAME BOARD  /////////// */
-
-.game-board{
+.game-board {
   /* border: 1px solid black; */
   width: 100%;
   height: 350px;
@@ -159,7 +144,7 @@ img.background__tembleweed {
   align-items: center;
 }
 
-.game-board-container{
+.game-board-container {
   /* border: 1px solid black; */
   width: 250px;
   height: 250px;
@@ -169,15 +154,13 @@ img.background__tembleweed {
   flex-wrap: wrap;
   justify-content: space-around;
 
-  font-family: 'Bangers';
+  font-family: "Bangers";
   font-size: 50px;
   text-align: center;
   flex-direction: column;
 }
 
-
-/* /////////  BUTTONS PANEL  /////////// */
-.button-panel{
+.button-panel {
   /* border: 1px solid black; */
   width: 100%;
   height: 100px;
@@ -186,34 +169,32 @@ img.background__tembleweed {
   align-items: center;
 }
 
-.game-buttons{
+.game-buttons {
   height: 40px;
   width: 40px;
   margin: 5px;
   background-color: white;
   border: solid black;
   border-width: 2px 2px 4px 4px;
-  border-radius:4% 95% 6% 95%/95% 4% 92% 5%;
+  border-radius: 4% 95% 6% 95%/95% 4% 92% 5%;
   transform: rotate(-1deg);
-
 }
 
-.reactions-buttons{
+.reactions-buttons {
   height: 60px;
   width: 120px;
   padding-top: 10px;
   padding-bottom: 10px;
   border: solid black;
   border-width: 3px 4px 3px 5px;
-  border-radius:95% 4% 92% 5%/4% 95% 6% 95%;
+  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
   transform: rotate(1deg);
-  font-family: 'Bangers';
+  font-family: "Bangers";
   font-size: 25px;
   /* opacity: 0.9; */
 }
 
-.reactions-buttons:hover{
+.reactions-buttons:hover {
   cursor: pointer;
   /* opacity: 1; */
-
 }
